# atari-rl-benchmarking

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  app.py  pyproject.toml
artifacts/: 00-quickstart.md
artifacts/evaluation/: 00-quickstart.md
artifacts/preparing/: 00-quickstart.md
configs/: algorithms.json  benchmark.json  default.yaml  envs.json  model_contracts.json  preprocessing.json
data/models/: quickstart.md
data/predictions/: quickstart.md
data/processed/: quickstart.md
docs/: project-reference-guide.md
docs/01-project-definition/: 02-goal.md  03-related-work.md  04-research-notes.md  05-dataset.md  06-solution.md  07-constraints.md  08-architecture.md  09-stack.md  10-structure.md  11-workflow.md  12-timeline.md  13-references.md  14-proposal.md
docs/deliverables/: 00-quickstart.md  01-proposal-feedback.md  01-proposal.md  02-report.docx  02-report.md  02-report.tex
docs/project-definition/: 00-quickstart.md  01-problem.md  02-goal.md  03-dataset.md  04-solution.md  05-constraints.md  06-architecture.md  07-stack.md  08-structure.md  09-workflow.md  10-references.md  benchmark_runbook.md  making-a-rewarding-rl-project.md  scope_decisions.md
evals/: 00-quickstart.md  01-evaluation.md  02-testing.md  03-performance-comparison.md  04-results-analysis.md  analyze_pilot.py  last_run_summary.json  resolved_envs.json
evals/benchmarks/: 00-quickstart.md
evals/checkpoints/1m_5seeds/: 1m_5seeds_results_20260701_153459.csv
evals/checkpoints/1m_5seeds/breakout/discretesac/seed_0/: discrete_sac_diagnostics.csv  final_model.pt
evals/checkpoints/1m_5seeds/breakout/discretesac/seed_1/: discrete_sac_diagnostics.csv  final_model.pt
evals/checkpoints/1m_5seeds/breakout/discretesac/seed_2/: discrete_sac_diagnostics.csv  final_model.pt
evals/checkpoints/1m_5seeds/breakout/discretesac/seed_3/: discrete_sac_diagnostics.csv  final_model.pt
evals/checkpoints/1m_5seeds/breakout/discretesac/seed_4/: discrete_sac_diagnostics.csv  final_model.pt
evals/checkpoints/1m_5seeds/breakout/ppo/seed_0/: ppo_diagnostics.csv
evals/checkpoints/1m_5seeds/breakout/ppo/seed_1/: ppo_diagnostics.csv
evals/checkpoints/1m_5seeds/breakout/ppo/seed_2/: ppo_diagnostics.csv
evals/checkpoints/1m_5seeds/breakout/ppo/seed_3/: ppo_diagnostics.csv
evals/checkpoints/1m_5seeds/breakout/ppo/seed_4/: ppo_diagnostics.csv
evals/checkpoints/1m_5seeds/pong/discretesac/seed_0/: discrete_sac_diagnostics.csv  final_model.pt
evals/checkpoints/1m_5seeds/pong/discretesac/seed_1/: discrete_sac_diagnostics.csv  final_model.pt
evals/pilot/: pilot_100k_1seed_manifest_20260622_164552.json  pilot_100k_1seed_results_20260622_164552.csv
evals/pilot_200k_tuned/: tuned_200k_1seed_manifest_20260623_103011.json  tuned_200k_1seed_results_20260623_103011.csv
evals/results/: 00-quickstart.md
evals/smoke/: smoke_manifest_20260622_164349.json  smoke_manifest_20260623_102849.json  smoke_results_20260616_203014.csv  smoke_results_20260616_203213.csv  smoke_results_20260622_162127.csv  smoke_results_20260622_162353.csv  smoke_results_20260622_163326.csv  smoke_results_20260622_164349.csv  smoke_results_20260623_102849.csv
notebooks/: 00-quickstart.ipynb
src/: __init__.py  config.py  deps.py  device.py  discrete_sac.py  envs.py  metadata.py  reporting.py  seeding.py
src/config/: __init__.py  config.py  loader.py  logger.py
src/evaluation/: __init__.py  metadata.py  metrics.py  reporting.py  validation.py
src/inference/: __init__.py  generate.py  record_playback.py
src/models/: __init__.py  build.py  discrete_sac.py  dqn.py  model_1.py  ppo.py  sb3.py  training.py
src/utils/: __init__.py  data_acquisition.py  data_processing.py  eda.py  helpers.py
tests/: __init__.py  test_app.py  test_settings.py
(+26 files in other folders)
