[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atari-rl-benchmarking"
version = "0.1.0"
description = "reproducible benchmarking of rl agents on atari 2600 games using stable-baselines3 and custom implementations"
readme = "README.md"
license = {text = "MIT"}
keywords = ["atari", "reinforcement-learning", "benchmarking", "stable-baselines3", "gymnasium"]
authors = [
    {name = "elsayed elmandoh", email = "elsayed@example.com"},
    {name = "mohamed kamal", email = "kamal@example.com"},
    {name = "mohamed zidan", email = "zidan@example.com"},
    {name = "mostafa mohie", email = "mostafa@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
torch = [
    "torch>=2.6.0",
    "accelerate>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "nbstripout>=0.8.0",
]
rl = [
    "gymnasium>=1.0.0",
    "ale-py>=0.10.0",
    "stable-baselines3>=2.5.0",
    "opencv-python>=4.10.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",
    "pillow>=11.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project.urls]
repository = "https://github.com/elsayedelmandoh/atari-rl-benchmarking"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]
