[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atari-rl-benchmarking"
version = "0.1.0"
description = "reproducible Atari 2600 reinforcement-learning benchmarks with DQN, PPO, and custom DiscreteSAC agents"
readme = "README.md"
license = {text = "MIT"}
keywords = ["atari", "reinforcement-learning", "benchmarking", "stable-baselines3", "gymnasium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Elsayed Elmandoh", email = "elsayed.elmandoua@queensu.ca"},
    {name = "Mohamed Hasan", email = "25qbd3@queensu.ca"},
    {name = "Mohamed Zidan", email = "25kbhb@queensu.ca"},
    {name = "Mostafa Elofy", email = "25djt3@queensu.ca"},
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
torch = [
    "torch>=2.6.0",
    "accelerate>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "nbstripout>=0.8.0",
]
rl = [
    "gymnasium>=1.0.0",
    "ale-py>=0.10.0",
    "stable-baselines3>=2.5.0",
    "opencv-python>=4.10.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",
    "pillow>=11.0.0",
    "moviepy>=2.1.0",
    "tensorboard>=2.16.0",
]
report = [
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "scipy>=1.15.0",
]

[project.scripts]
atari-benchmark = "app:main"
atari-record-playback = "src.inference.record_playback:main"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project.urls]
repository = "https://github.com/elsayedelmandoh/atari-rl-benchmarking"
report = "https://github.com/elsayedelmandoh/atari-rl-benchmarking/blob/main/docs/deliverables/02-report.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]
